--- a/css/estilo.css
+++ b/css/estilo.css
@@ -142,7 +142,7 @@ body {
 		width: 38%;
 	}
 	#foto {
-		height: 15vh;
+		height: 100%;
     	width: 84%;
 	}
 	.personalinformation {
@@ -188,7 +188,6 @@ body {
 		height: 24vh;
 	}
 	#foto {
-		height: 15vh;
     	width: 100%;
 	}
 	.personalinformation {
@@ -205,8 +204,7 @@ body {
 		height: 26vh;
 	}
 	#foto {
-		height: 15vh;
-		width: 90%;
+		width: 100%;
 	}
 	.personalinformation {
 		height: auto;
