--- a/css/estilo.css
+++ b/css/estilo.css
@@ -142,7 +142,7 @@ body {
 		width: 38%;
 	}
 	#foto {
-		height: 100%;
+		height: 86%;
     	width: 84%;
 	}
 	.personalinformation {
@@ -188,6 +188,7 @@ body {
 		height: 24vh;
 	}
 	#foto {
+		height: 15vh;
     	width: 100%;
 	}
 	.personalinformation {
@@ -204,7 +205,8 @@ body {
 		height: 26vh;
 	}
 	#foto {
-		width: 100%;
+		height: 15vh;
+		width: 90%;
 	}
 	.personalinformation {
 		height: auto;
